[package]
name = "sahyadri-consensus"
description = "Sahyadri consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
sahyadri-addresses.workspace = true
sahyadri-consensus-core.workspace = true
sahyadri-consensus-notify.workspace = true
sahyadri-consensusmanager.workspace = true
sahyadri-core.workspace = true
sahyadri-database.workspace = true
sahyadri-hashes.workspace = true
sahyadri-math.workspace = true
sahyadri-merkle.workspace = true
sahyadri-muhash.workspace = true
sahyadri-notify.workspace = true
sahyadri-pow.workspace = true
sahyadri-txscript.workspace = true
sahyadri-txscript-errors.workspace = true
sahyadri-utils.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
sahyadri-txscript-errors.workspace = true
sahyadri-addresses.workspace = true

[[bench]]
name = "parallel_muhash"
harness = false

[[bench]]
name = "check_scripts"
harness = false

[features]
html_reports = []
devnet-prealloc = ["sahyadri-consensus-core/devnet-prealloc"]

[lints]
workspace = true
