[package]
name = "sahyadri-mining"
description = "Sahyadri mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sahyadri-addresses.workspace = true
sahyadri-consensus-core.workspace = true
sahyadri-consensusmanager.workspace = true
sahyadri-core.workspace = true
sahyadri-hashes.workspace = true
sahyadri-mining-errors.workspace = true
sahyadri-muhash.workspace = true
sahyadri-txscript.workspace = true
sahyadri-utils.workspace = true

futures-util.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
sweep-bptree = "0.4.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
faster-hex.workspace = true

[dev-dependencies]
sahyadri-txscript.workspace = true
criterion.workspace = true
secp256k1.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
