[package]
name = "rothschild"
description = "Sahyadri Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sahyadri-addresses.workspace = true
sahyadri-consensus-core.workspace = true
sahyadri-core.workspace = true
sahyadri-grpc-client.workspace = true
sahyadri-notify.workspace = true
sahyadri-rpc-core.workspace = true
sahyadri-txscript.workspace = true
sahyadri-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
