[package]
name = "sahyadri-wasm"
description = "SAHYADRI WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
repository.workspace = true
# wasm-pack requires this value to be a string
# (it can not be derived from the workspace)
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if.workspace = true
js-sys.workspace = true
sahyadri-addresses.workspace = true
sahyadri-bip32.workspace = true
sahyadri-consensus-core.workspace = true
sahyadri-consensus-wasm.workspace = true
sahyadri-core.workspace = true
sahyadri-math.workspace = true
sahyadri-pow.workspace = true
sahyadri-txscript.workspace = true
sahyadri-rpc-core.workspace = true
sahyadri-utils.workspace = true
sahyadri-wasm-core.workspace = true
sahyadri-wallet-core.workspace = true
sahyadri-wallet-keys.workspace = true
sahyadri-wrpc-client.workspace = true
sahyadri-wrpc-wasm.workspace = true
num.workspace = true
wasm-bindgen.workspace = true
workflow-log.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[features]
wasm32-sdk = [
    "sahyadri-wallet-core/wasm32-sdk",
    "sahyadri-pow/wasm32-sdk",
    "sahyadri-txscript/wasm32-sdk",
]
wasm32-core = [
    "sahyadri-wallet-core/wasm32-core",
    "sahyadri-pow/wasm32-sdk",
    "sahyadri-txscript/wasm32-sdk",
]
wasm32-rpc = [
    "sahyadri-consensus-core/wasm32-sdk",
    "sahyadri-consensus-wasm/wasm32-sdk",
    "sahyadri-wrpc-client/wasm32-sdk",
    "sahyadri-wrpc-wasm/wasm32-sdk",
]
wasm32-keygen = []
default = []

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[package.metadata.emanate.wasm]
targets = [
    { target = "nodejs", out-dir = "nodejs/sahyadri" },
    { target = "web", out-dir = "web/sahyadri" },
]
folder = "setup"

# Workaround for Rust 1.87.0
# https://github.com/rust-lang/rust/issues/141048
[package.metadata.wasm-pack.profile.release]
# This optimization configuration requires "-Ctarget-cpu=mvp" Rustflag (only enable W3C MVP feature set)
# This flag is automatically used either via (release optimized) build script at root
#   or via .cargo/config.toml when executing the build from /wasm
wasm-opt = ["-O","--enable-bulk-memory"]

[lints]
workspace = true
