[package]
name = "sahyadri-addressmanager"
description = "Sahyadri address manager"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
borsh.workspace = true
igd-next.workspace = true
itertools.workspace = true
sahyadri-consensus-core.workspace = true
sahyadri-core.workspace = true
sahyadri-database.workspace = true
sahyadri-utils.workspace = true
local-ip-address.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rocksdb.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
rv.workspace = true

[lints]
workspace = true
