[package]
name = "sahyadri-connectionmanager"
description = "Sahyadri connection manager"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
itertools.workspace = true
sahyadri-addressmanager.workspace = true
sahyadri-core.workspace = true
sahyadri-p2p-lib.workspace = true
sahyadri-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true

[lints]
workspace = true