[package]
name = "sahyadri-consensus-notify"
description = "Sahyadri consensus notifier"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
sahyadri-consensus-core.workspace = true
sahyadri-core.workspace = true
sahyadri-hashes.workspace = true
sahyadri-notify.workspace = true
sahyadri-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true

[lints]
workspace = true
