[package]
name = "sahyadri-pow"
description = "Sahyadri proof-of-work"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []

[dependencies]
js-sys.workspace = true
sahyadri-consensus-core.workspace = true
sahyadri-consensus-client.workspace = true
sahyadri-hashes.workspace = true
sahyadri-math.workspace = true
sahyadri-utils.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true
num.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
