[package]
name = "sahyadri-merkle"
description = "Sahyadri merkle tree library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sahyadri-hashes.workspace = true

[lints]
workspace = true
