[package]
name = "sahyadri-p2p-mining"
description = "Sahyadri p2p mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sahyadri-core.workspace = true
sahyadri-consensus-core.workspace = true
sahyadri-consensusmanager.workspace = true
sahyadri-mining-errors.workspace = true
sahyadri-hashes.workspace = true
sahyadri-math.workspace = true
sahyadri-p2p-lib.workspace = true
sahyadri-utils.workspace = true
sahyadri-utils-tower.workspace = true
log.workspace = true
tokio.workspace = true

[lints]
workspace = true
