[package]
name = "sahyadri-rpc-core"
description = "Sahyadri RPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = [
    "sahyadri-consensus-client/wasm32-sdk",
    "sahyadri-consensus-wasm/wasm32-sdk"
]

[dependencies]
sahyadri-addresses.workspace = true
sahyadri-consensus-core.workspace = true
sahyadri-consensus-client.workspace = true
sahyadri-consensus-notify.workspace = true
sahyadri-consensus-wasm.workspace = true
sahyadri-core.workspace = true
sahyadri-hashes.workspace = true
sahyadri-index-core.workspace = true
sahyadri-math.workspace = true
sahyadri-mining-errors.workspace = true
sahyadri-notify.workspace = true
sahyadri-txscript.workspace = true
sahyadri-utils.workspace = true
sahyadri-rpc-macros.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
paste.workspace = true
rand.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
serde_nested_with.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
