[package]
name = "sahyadri-rpc-service"
description = "Sahyadri RPC service"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sahyadri-addresses.workspace = true
sahyadri-consensus-core.workspace = true
sahyadri-consensus-notify.workspace = true
sahyadri-consensusmanager.workspace = true
sahyadri-core.workspace = true
sahyadri-hashes.workspace = true
sahyadri-index-core.workspace = true
sahyadri-math.workspace = true
sahyadri-mining.workspace = true
sahyadri-notify.workspace = true
sahyadri-p2p-flows.workspace = true
sahyadri-p2p-lib.workspace = true
sahyadri-p2p-mining.workspace = true
sahyadri-perf-monitor.workspace = true
sahyadri-rpc-core.workspace = true
sahyadri-txscript.workspace = true
sahyadri-utils.workspace = true
sahyadri-utils-tower.workspace = true
sahyadri-utxoindex.workspace = true

async-trait.workspace = true
log.workspace = true
tokio.workspace = true
triggered.workspace = true
workflow-rpc.workspace = true
faster-hex.workspace = true

[lints]
workspace = true
