[package]
name = "sahyadri-testing-integration"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sahyadri-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first

sahyadri-addresses.workspace = true
sahyadri-bip32.workspace = true
sahyadri-consensus-core.workspace = true
sahyadri-consensus-notify.workspace = true
sahyadri-consensus.workspace = true
sahyadri-consensusmanager.workspace = true
sahyadri-core.workspace = true
sahyadri-database.workspace = true
sahyadri-grpc-client.workspace = true
sahyadri-grpc-core.workspace = true
sahyadri-grpc-server.workspace = true
sahyadri-hashes.workspace = true
sahyadri-index-processor.workspace = true
sahyadri-math.workspace = true
sahyadri-merkle.workspace = true
sahyadri-muhash.workspace = true
sahyadri-notify.workspace = true
sahyadri-pow.workspace = true
sahyadri-rpc-core.workspace = true
sahyadri-rpc-service.workspace = true
sahyadri-txscript.workspace = true
sahyadri-utils.workspace = true
sahyadri-utxoindex.workspace = true
sahyadri-wrpc-server.workspace = true
sahyadrid.workspace = true

async-channel.workspace = true
async-trait.workspace = true
bincode.workspace = true
clap.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
dhat = { workspace = true, optional = true }
faster-hex.workspace = true
flate2.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde.workspace = true
smallvec.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-perf-monitor.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["small_rng"] }
tokio = { workspace = true, features = ["rt", "macros", "process"] }
sahyadri-txscript-errors.workspace = true

[features]
heap = ["dhat"]
html_reports = []
devnet-prealloc = ["sahyadrid/devnet-prealloc"]

[lints]
workspace = true
