[package]
name = "sahyadri-wallet-pskt"
keywords = ["csm", "wallet", "pskt", "psbt", "bip-370"]
description = "Partially Signed Sahyadri Transaction"
categories = ["cryptography::cryptocurrencies"]
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
wasm32-sdk = ["sahyadri-consensus-client/wasm32-sdk"]
wasm32-types = ["sahyadri-consensus-client/wasm32-types"]

[dependencies]
sahyadri-addresses.workspace = true
sahyadri-bip32.workspace = true
sahyadri-consensus-client.workspace = true
sahyadri-consensus-core.workspace = true
sahyadri-txscript-errors.workspace = true
sahyadri-txscript.workspace = true
sahyadri-utils.workspace = true

bincode.workspace = true
derive_builder.workspace = true
js-sys.workspace = true
futures.workspace = true
hex.workspace = true
secp256k1.workspace = true
serde_repr.workspace = true
serde-value.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
workflow-wasm.workspace = true
separator.workspace = true

[dev-dependencies]
serde_json.workspace = true
wasm-bindgen-test.workspace = true
js-sys.workspace = true
web-sys.workspace = true

[lints]
workspace = true
